--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "fuse.js": "^6.5.3",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10"
   }
